--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
+        "flatpickr": "^4.6.13",
         "tom-select": "^2.4.3"
     }
 }
